freeze project deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 Django==1.9.3
+django-angular-scaffold==0.12.1
+django-tastypie==0.13.3
 gunicorn==19.4.5
+python-dateutil==2.5.0
+python-mimeparse==1.5.1
+six==1.10.0
